traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:22: error: not found: value get
    if (get(X)==6) {
        ^TraversalByColumn:22: error: not found: value X
    if (get(X)==6) {
            ^TraversalByColumn:27: warning: enclosing method fonctionTest has result type Unit: return value discarded
  return res
  ^